Added hero banner managment
